# Parser

./: .gitignore  .replit  README.md  pyproject.toml  replit.md
attached_assets/: Pasted--DRF-Python-Rea-1765931470731_1765931470732.txt  Pasted--DocFlow-Builder-DOCX-PDF--1765910201160_1765910201160.txt
backend/apps/doc_builder/: serializers.py  views.py
backend/apps/doc_builder/migrations/: 0001_initial.py
backend/apps/parser_app/: models.py  serializers.py  views.py
backend/apps/parser_app/migrations/: 0001_initial.py  0002_parseddocument_editor_json_and_more.py
backend/apps/parser_app/utils/: docx_parser.py  elements.py  parser.py  pdf_parser.py
backend/apps/templates_app/: models.py  serializers.py  views.py
backend/apps/templates_app/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/components/editor/: Canvas.tsx  CanvasToolbar.tsx  Editor.tsx  ElementRenderer.tsx  ElementsPanel.tsx  PropertiesPanel.tsx  ResizeHandles.tsx
frontend/src/hooks/editorHooks/: useAutoZoom.ts  useDraft.ts  useDragResize.ts  useHistory.ts  useKeyboard.ts
frontend/src/pages/: Dashboard.tsx  DocumentBuilder.css  DocumentBuilder.tsx  EditTemplate.tsx  MainEditor.tsx  NewTemplate.tsx  Parser.tsx  ParserWithActions.tsx  RenderTemplate.tsx  ShareRender.tsx
frontend/src/styles/: design-system.css
frontend/src/utils/help/: createDefaultElement.ts  generateDocx.ts
(+2 files in other folders)
